--- a/mainpage.html
+++ b/mainpage.html
@@ -5,6 +5,7 @@
   <title>Iframe Embed (Dynamic Slugs)</title>
   <style>
     iframe { width:100%; height:100vh; border:none; }
+    body {overflow:hidden;}
   </style>
 </head>
 <body>
