--- a/mainpage.html
+++ b/mainpage.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Iframe Embed (Dynamic Slugs)</title>
+  <title>AKDX::ENV2025 VersionOne</title>
   <style>
     iframe { width:100%; height:100vh; border:none; }
-    body {overflow:hidden;}
+    body {overflow:hidden; margin:0; border:0; padding:0;}
   </style>
 </head>
 <body>
