--- a/mainpage.html
+++ b/mainpage.html
@@ -9,6 +9,8 @@
   </style>
 </head>
 <body>
+  <!-- Devise View -->
+  <div class="dView" style="width:20px; height:20px; position:fixed; top:0; right:0; background:black;"></div>
   <iframe id="myFrame" name="myFrame"></iframe>
 
   <script>
