--- a/mainpage.html
+++ b/mainpage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Devise View -->
-  <div class="dView" style="width:20px; height:20px; position:fixed; top:0; right:0; background:black;"></div>
+  <div class="dView" style="width:20px; height:20px; position:fixed; top:0; right:30; color:white; font-size:12px;background:yellow;">M</div>
   <iframe id="myFrame" name="myFrame"></iframe>
 
   <script>
