--- a/mainpage.html
+++ b/mainpage.html
@@ -10,10 +10,9 @@
 </head>
 <body>
   <!-- Devise View -->
-  <div class="dView" style="width: 20px; height: 20px; position: fixed; top: 0; right: 30px; color: black; font-size: 13px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;">M</div>
+  <div class="dView" style="width: 20px; height: 18px; position: fixed; top: 0; right: 16px; color: black; font-size: 13px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;"><b>i</b></div>
 
-  <div class="dView" style="width: 20px; height: 20px; position: fixed; top: 0; right: 70px; color: black; font-size: 13px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;">T</div>
-
+  
   
   <iframe id="myFrame" name="myFrame"></iframe>
 
