--- a/mainpage.html
+++ b/mainpage.html
@@ -35,23 +35,28 @@
     });
   </script>
 
-  <script>
+
+<script>
 function resizeIframe() {
   const iframe = document.getElementById("myFrame");
 
-  // Get viewport height in pixels
-  const vh = window.innerHeight;
+  // Slightly scaled down height (90% of viewport height)
+  const height = Math.round(window.innerHeight * 0.9);
 
-  // Set iframe height = 100vh
-  const height = vh;
-
-  // Calculate width using 16:9 ratio
+  // Maintain 16:9 ratio
   const width = Math.round(height * (9 / 16));
 
-  // Apply dimensions
   iframe.style.height = height + "px";
   iframe.style.width = width + "px";
 }
+
+// Run once on load
+resizeIframe();
+
+// Also resize dynamically if window is resized
+window.addEventListener("resize", resizeIframe);
 </script>
+
+  
 </body>
 </html>
