--- a/mainpage.html
+++ b/mainpage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- Devise View -->
-  <div onclick="resizeIframe()" class="dView" style="width: 20px; height: 18px; position: fixed; top: 0; right: 16px; color: black; font-size: 13px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;"><b>i</b></div>
+  <div onclick="resizeIframe()" class="dView" style="width: 20px; height: 18px; position: fixed; top: 0; right: 16px; color: black; font-size: 14px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;"><b>...</b></div>
 
   
   <div class="iframeWrap" style="display:flex;">
