--- a/mainpage.html
+++ b/mainpage.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <!-- Devise View -->
-  <div onclick="showButtonPanel()" class="dView" style="width: 20px; height: 18px; position: fixed; top: 0; right: 16px; color: black; font-size: 14px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;"><b>...</b></div>
+  <div onclick="showButtonPanel()" class="dView" style="cursor:pointer; width: 20px; height: 18px; position: fixed; top: 0; right: 16px; color: black; font-size: 14px; background: yellow; font-family: sans-serif; text-align: center; padding: 5px 0;"><b>...</b></div>
 
    <!-- Button panel (initially hidden) -->
     <div id="buttonPanel">
