--- a/mainpage.html
+++ b/mainpage.html
@@ -48,7 +48,7 @@
         <button onclick="reloadPage()">X</button>
     </div>
   
-  <div class="iframeWrap" style="display:flex;">
+  <div id="iframeWrap" class="iframeWrap" style="display:flex; background:darkgrey;">
   <iframe id="myFrame" name="myFrame"></iframe>
 </div>
   
