--- a/mainpage.html
+++ b/mainpage.html
@@ -22,7 +22,7 @@
         #buttonPanel button {
             margin: 5px;
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
             border: none;
             border-radius: 5px;
@@ -43,9 +43,9 @@
 
    <!-- Button panel (initially hidden) -->
     <div id="buttonPanel">
-        <button onclick="setMobileView()">M</button>
-        <button onclick="setTabletView()">T</button>
-        <button onclick="reloadPage()">X</button>
+        <button onclick="setMobileView()">MOBILE VIEW</button>
+        <button onclick="setTabletView()">TABLET VIEW</button>
+        <button onclick="reloadPage()">BACK</button>
     </div>
   
   <div id="iframeWrap" class="iframeWrap" style="display:flex; background:darkgrey;">
