--- a/mainpage.html
+++ b/mainpage.html
@@ -45,7 +45,7 @@
     <div id="buttonPanel">
         <button onclick="setMobileView()">MOBILE VIEW</button>
         <button onclick="setTabletView()">TABLET VIEW</button>
-        <button onclick="reloadPage()">BACK</button>
+        <button onclick="reloadPage()">CANCEL</button>
     </div>
   
   <div id="iframeWrap" class="iframeWrap" style="display:flex; background:darkgrey;">
